# netsketch

./: .gitignore  Cargo.toml  Makefile
ns-client/: Cargo.toml
ns-client/src/: cli.rs  connection.rs  main.rs  models.rs  operations.rs  test.rs
ns-client/src/models/: canvas.rs  enums.rs
ns-client/src/operations/: handle_prompt.rs
ns-client/src/utils/: errors.rs
ns-core/: Cargo.toml
ns-core/src/: errors.rs  models.rs
ns-core/src/models/: canvas.rs  commands.rs  packets.rs
ns-server/: Cargo.toml
ns-server/src/: main.rs  models.rs  operations.rs
ns-server/src/models/: server_state.rs  session.rs  state.rs  user_data.rs
ns-server/src/operations/: handle_client.rs  init.rs
report/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
