[package]
name = "netsketch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ns-core = { version = "0.1.0", path = "../ns-core" }
macroquad = { version = "0.4.5" }
bincode.workspace = true
clap.workspace = true
